#848 highlight positioning in coy theme fix - changed overflow for pre and code

--- a/themes/prism-coy.css
+++ b/themes/prism-coy.css
@@ -42,7 +42,7 @@ pre[class*="language-"] {
 	background-image: linear-gradient(transparent 50%, rgba(69, 142, 209, 0.04) 50%);
 	background-size: 3em 3em;
 	background-origin: content-box;
-	overflow: visible;
+	overflow: auto;
 	max-height: 30em;
 	padding: 0;
 }
@@ -52,7 +52,6 @@ code[class*="language"] {
 	height: 100%;
 	padding: 0 1em;
 	display: block;
-	overflow: auto;
 }
 
 /* Margin bottom to accomodate shadow */
